Modify PlatformIO configuration for ESP32-S3 relay

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,20 +8,41 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:az-delivery-devkit-v4]
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
+[env:waveshare-esp32-s3-relay-6ch]
 platform = espressif32
-platform_packages = framework-arduinoespressif32
-build_flags = -std=c++11
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
+
+platform_packages = 
+    framework-arduinoespressif32
+
+build_flags = 
+    -std=c++11
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+
 extra_scripts = pre:lib/ProjectUtils-esp32/copy_lib_data.py
+
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
+
 #upload_protocol = espota
 #upload_port = 192.168.0.13
+
 lib_deps =
     me-no-dev/AsyncTCP @ ^1.1.1
     https://github.com/me-no-dev/ESPAsyncWebServer.git
     ayushsharma82/WebSerial @ ^1.1.0
     sstaub/NTP@^1.6
+
 
